--- a/android.main/res/layout/fragment_chat_detail.xml
+++ b/android.main/res/layout/fragment_chat_detail.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/chat_detail"
+    android:id="@+id/interaction_detail"
     android:background="#DDDDDD"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
     android:textIsSelectable="true"
-    tools:context=".ChatDetailFragment">
+    tools:context=".InteractionDetailFragment">
 
     <ListView
         android:id="@+id/listView"
