--- a/android.main/res/layout/fragment_chat_detail.xml
+++ b/android.main/res/layout/fragment_chat_detail.xml
@@ -16,10 +16,10 @@
 		android:transcriptMode="normal"
 		android:divider="@null"
 		android:padding="0dp"
-        android:layout_above="@+id/messageSender" />
+        android:layout_above="@+id/interactionEventSender" />
 
     <LinearLayout
-        android:id="@+id/messageSender"
+        android:id="@+id/interactionEventSender"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
