--- a/android.main/res/layout/activity_chat_list.xml
+++ b/android.main/res/layout/activity_chat_list.xml
@@ -1,10 +1,10 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chat_list"
-    android:name="sneer.interactin.ui.InteractionsListFragment"
+    android:name="sneer.interactin.ui.InteractionListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context=".InteractionsListActivity"
+    tools:context=".InteractionListActivity"
     tools:layout="@android:layout/list_content" />
