--- a/android.main/res/layout/activity_interaction_list.xml
+++ b/android.main/res/layout/activity_interaction_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".MainActivity" >
+    tools:context=".InteractionListActivity" >
 
     <ListView
         android:id="@+id/listView"
