--- a/android.main/res/layout/list_item_party_message.xml
+++ b/android.main/res/layout/list_item_party_message.xml
@@ -40,7 +40,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/interactionEventContent"
-			android:layout_alignLeft="@+id/interactionEventContent"
+			android:layout_alignParentRight="true"
 			android:textSize="12sp"
 			android:textColor="#777"
 			android:text="@string/dummy_text" />
