--- a/android.main/res/layout/list_item_user_message.xml
+++ b/android.main/res/layout/list_item_user_message.xml
@@ -20,21 +20,20 @@
 	    android:layout_toLeftOf="@+id/speechBubbleArrowRight"
 	    android:padding="10dp"
 	    android:background="@drawable/user_speech_bubble">
-	
-		<TextView
+	    
+        <TextView
 			android:id="@+id/interactionEventSender"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_height="0px"
 			android:layout_alignLeft="@+id/interactionEventContent"
 			android:textStyle="bold"
-			android:textColor="#D34F39"
+			android:textColor="#383"
 			android:text="@string/dummy_text" />
 	
 		<TextView
 			android:id="@+id/interactionEventContent" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/interactionEventSender"
 			android:text="@string/dummy_text" />
 		
 		<TextView
@@ -42,7 +41,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/interactionEventContent"
-			android:layout_alignLeft="@+id/interactionEventContent"
+			android:layout_alignRight="@+id/interactionEventContent"
 			android:textSize="12sp"
 			android:textColor="#777"
 			android:text="@string/dummy_text" />
