--- a/android.main/res/layout/list_item_user_message.xml
+++ b/android.main/res/layout/list_item_user_message.xml
@@ -41,7 +41,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/interactionEventContent"
-			android:layout_alignRight="@+id/interactionEventContent"
+			android:layout_alignLeft="@+id/interactionEventContent"
 			android:textSize="12sp"
 			android:textColor="#777"
 			android:text="@string/dummy_text" />
