--- a/android.main/res/layout/activity_profile.xml
+++ b/android.main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:contentDescription="@string/profile_view_content_description"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/neide" />
 
         <EditText
             android:id="@+id/firstName"
