--- a/android.main/res/layout/activity_profile.xml
+++ b/android.main/res/layout/activity_profile.xml
@@ -13,7 +13,9 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/profilePicture"
+            android:id="@+id/selfie"
+            android:clickable="true"
+            android:onClick="selfieOnClick" 
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentLeft="true"
@@ -29,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="15dp"
-            android:layout_toRightOf="@+id/profilePicture"
+            android:layout_toRightOf="@+id/selfie"
             android:ems="10"
             android:hint="@string/profile_view_first_name"
             android:inputType="textPersonName" >
@@ -43,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/firstName"
             android:layout_marginLeft="35dp"
-            android:layout_toRightOf="@+id/profilePicture"
+            android:layout_toRightOf="@+id/selfie"
             android:ems="10"
             android:hint="@string/profile_view_last_name"
             android:inputType="textPersonName"
@@ -75,14 +77,14 @@
             android:background="@android:color/black" />
 
         <EditText
-            android:id="@+id/nickName"
+            android:id="@+id/preferredNickName"
             android:layout_width="290dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:ems="10"
-            android:hint="@string/profile_view_nickname"
+            android:hint="@string/profile_view_preferred_nickname"
             android:inputType="textPersonName"
             android:paddingLeft="10dp" >
         </EditText>
@@ -91,7 +93,7 @@
             android:id="@+id/country"
             android:layout_width="290dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nickName"
+            android:layout_below="@+id/preferredNickName"
             android:layout_marginLeft="15dp"
             android:ems="10"
             android:hint="@string/profile_view_country"
