--- a/android.main/res/menu/contacts.xml
+++ b/android.main/res/menu/contacts.xml
@@ -1,21 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@+id/action_add_contact" 
-        android:title="@string/action_add_contact"
-        android:showAsAction="ifRoom" 
-        android:orderInCategory="100" />
-    
+    <!-- Search / will display always -->
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_action_search_holo_dark"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_search"/>
+    <item
+        android:id="@+id/action_add_contact"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom"
+        android:icon="@drawable/ic_add_contact_holo_dark"
+        android:title="@string/action_add_contact"/>
     <item
         android:id="@+id/action_profile"
         android:orderInCategory="101"
-        android:title="@string/action_profile" />
-    
-    <item android:id="@+id/action_send_pk" 
-        android:title="@string/action_send_pk" 
-        android:orderInCategory="102" />
+        android:title="@string/action_profile"/>
+    <item
+        android:id="@+id/action_send_pk"
+        android:orderInCategory="102"
+        android:title="@string/action_send_pk"/>
+    <item
+        android:id="@+id/action_copy_pk"
+        android:orderInCategory="103"
+        android:title="@string/action_copy_pk"/>
 
-    <item android:id="@+id/action_copy_pk" 
-        android:title="@string/action_copy_pk" 
-        android:orderInCategory="103" />   
-    
 </menu>
