--- a/android.main/res/menu/interaction.xml
+++ b/android.main/res/menu/interaction.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@+id/action_new_interaction" 
-        android:title="@string/action_new_interaction"
-        android:showAsAction="always" 
-        android:orderInCategory="100" />
-    
+    <item
+        android:id="@+id/action_new_interaction"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="@string/action_new_interaction"/>
+
 </menu>
