--- a/android.main/res/layout/activity_interaction.xml
+++ b/android.main/res/layout/activity_interaction.xml
@@ -1,23 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/interaction_detail"
-    android:background="#DDDDDD"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DDDDDD"
     android:padding="0dp"
     android:textIsSelectable="true"
-    tools:context=".InteractionActivity">
+    tools:context=".InteractionActivity" >
 
-     <ListView
+    <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_above="@+id/messageSender"
+        android:divider="@null"
+        android:padding="0dp"
         android:stackFromBottom="true"
-		android:transcriptMode="normal"
-		android:divider="@null"
-		android:padding="0dp"
-        android:layout_above="@+id/messageSender" />
-     
+        android:transcriptMode="normal" />
+
     <LinearLayout
         android:id="@+id/messageSender"
         android:layout_width="fill_parent"
@@ -33,18 +33,29 @@
             android:layout_weight="1"
             android:inputType="textMultiLine"
             android:lines="4"
-            android:minLines="1"  
+            android:minLines="1"
             android:scrollbars="vertical" >
         </EditText>
+        
+        <ImageButton
+            android:id="@+id/lastActionButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/interaction_activity_last_action_button"
+            android:src="@drawable/ic_action_refresh" >
+        </ImageButton>
 
-        <Button
-            android:id="@+id/sendButton"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/button_send"
-            android:layout_gravity="bottom" >
-        </Button>
+        <ImageButton
+            android:id="@+id/actionButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/interaction_activity_action_button"
+            android:src="@drawable/ic_action_send_holo_light" >
+        </ImageButton>
     </LinearLayout>
 
 </RelativeLayout>
