--- a/android.main/res/layout/activity_interaction.xml
+++ b/android.main/res/layout/activity_interaction.xml
@@ -23,7 +23,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#CCCCCC"
+        android:background="#EEEEEE"
         android:orientation="horizontal" >
 
         <EditText
@@ -54,7 +54,7 @@
             android:layout_gravity="bottom"
             android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/interaction_activity_action_button"
-            android:src="@drawable/ic_action_send_holo_light" >
+            android:src="@drawable/ic_action_send" >
         </ImageButton>
     </LinearLayout>
 
