--- a/android.main/res/layout/activity_interaction.xml
+++ b/android.main/res/layout/activity_interaction.xml
@@ -3,7 +3,7 @@
     android:id="@+id/interaction_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DDDDDD"
+    android:background="#DDDDEE"
     android:padding="0dp"
     android:textIsSelectable="true"
     tools:context=".InteractionActivity" >
@@ -54,7 +54,7 @@
             android:layout_gravity="bottom"
             android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/interaction_activity_action_button"
-            android:src="@drawable/ic_action_send" >
+            android:src="@drawable/ic_action_new" >
         </ImageButton>
     </LinearLayout>
 
