--- a/android.main/res/layout/activity_system_report.xml
+++ b/android.main/res/layout/activity_system_report.xml
@@ -8,10 +8,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="sneer.android.main.SystemReportActivity" >
 
-    <TextView
-        android:id="@+id/reportView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dummy_text" />
+    <ScrollView
+        android:id="@+id/scrollerView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        tools:ignore="UselessParent" >
+
+        <TextView
+            android:id="@+id/reportView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+    </ScrollView>
 
 </RelativeLayout>
