Always scroll report view to botton after reportMessage

--- a/android.main/res/layout/activity_system_report.xml
+++ b/android.main/res/layout/activity_system_report.xml
@@ -9,7 +9,7 @@
     tools:context="sneer.android.main.SystemReportActivity" >
 
     <ScrollView
-        android:id="@+id/scrollerView"
+        android:id="@+id/scrollView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:fillViewport="true"
