--- a/android.main/res/layout/activity_main.xml
+++ b/android.main/res/layout/activity_main.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".InteractionListActivity" >
+    tools:context=".MainActivity" >
 
     <ListView
-        android:id="@+id/mainListView"
+        android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="10dp" />
+        android:padding="5dp" />
 
 </RelativeLayout>
