--- a/android.main/res/layout/list_item_party_message.xml
+++ b/android.main/res/layout/list_item_party_message.xml
@@ -20,17 +20,17 @@
 	    android:background="@drawable/contact_speech_bubble">
 	
 		<TextView
-			android:id="@+id/interactionEventContent" 
+			android:id="@+id/messageContent" 
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/dummy_text" />
 		
 		<TextView
-			android:id="@+id/interactionEventTime"
+			android:id="@+id/messageTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/interactionEventContent"
-			android:layout_alignLeft="@+id/interactionEventContent"
+			android:layout_below="@+id/messageContent"
+			android:layout_alignLeft="@+id/messageContent"
 			android:textSize="12sp"
 			android:textColor="#777"
 			android:text="@string/dummy_text" />
