--- a/android.main/res/layout/list_item_main.xml
+++ b/android.main/res/layout/list_item_main.xml
@@ -23,6 +23,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:text="@string/dummy_text"
+        android:textSize="16sp"
         android:textStyle="normal|bold" />
 
     <TextView
@@ -34,7 +35,7 @@
         android:paddingRight="5dp"
         android:paddingTop="5dp"
         android:text="@string/dummy_date"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/conversationSummary"
@@ -47,6 +48,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="35dp"
         android:paddingTop="5dp"
+        android:textSize="15sp"
         android:text="@string/string_dummy_conversation_text" >
     </TextView>
 
