--- a/android.main/res/layout/activity_contact.xml
+++ b/android.main/res/layout/activity_contact.xml
@@ -2,16 +2,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sneer.android.main.ui.ContactActivity" >
+    android:background="#e6e6e6"
+    android:orientation="vertical"
+    tools:context="${relativePackage}.${activityClass}" >
+
+    <RelativeLayout
+        android:id="@+id/nicknameRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#f6f6f6"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/lblContactSection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/profile_view_section_contact" />
+
+        <View
+            android:id="@+id/view01"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/lblContactSection"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp"
+            android:background="@android:color/black" />
+
+        <EditText
+            android:id="@+id/nickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view01"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
+            android:hint="@string/contact_view_nickname"
+            android:inputType="textPersonName"
+            android:textAppearance="@android:style/TextAppearance.Large" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/publicKey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nickname"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"
+            android:hint="@string/contact_view_public_key"
+            android:inputType="textPersonName" >
+        </EditText>
+
+        <TextView
+            android:id="@+id/lblProfileSection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/publicKey"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/profile_view_section_profile" />
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/lblProfileSection"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp"
+            android:background="@android:color/black" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/nameRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/nicknameRelativeLayout"
         android:orientation="vertical" >
 
         <ImageView
@@ -20,6 +91,7 @@
             android:layout_height="80dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
             android:background="#afafaf"
             android:clickable="true"
             android:contentDescription="@string/profile_view_content_description"
@@ -34,33 +106,22 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:layout_toRightOf="@+id/selfie"
-            android:hint="@string/profile_view_first_name" >
+            android:hint="@string/profile_view_first_name"
+            android:textAppearance="@android:style/TextAppearance.Medium" >
         </TextView>
 
         <TextView
             android:id="@+id/preferredNickName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/fullName"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:layout_toRightOf="@+id/selfie"
-            android:hint="@string/profile_view_first_name" >
-        </TextView>
-
-        <EditText
-            android:id="@+id/nickNameEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/preferredNickName"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="8dp"
-            android:layout_toRightOf="@+id/selfie"
             android:hint="@string/profile_view_preferred_nickname"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp" >
-        </EditText>
+            android:textAppearance="@android:style/TextAppearance.Medium" >
+        </TextView>
     </RelativeLayout>
 
     <RelativeLayout
@@ -69,18 +130,40 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/nameRelativeLayout"
         android:orientation="vertical" >
-        
+
+        <TextView
+            android:id="@+id/lblLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/profile_view_location" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/lblLocation"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp"
+            android:background="@android:color/black"
+            android:hint="@string/profile_view_location" />
+
         <TextView
             android:id="@+id/city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/view"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
             android:hint="@string/profile_view_city"
-            android:paddingLeft="10dp" >
+            android:paddingLeft="10dp"
+            android:textAppearance="@android:style/TextAppearance.Medium" >
         </TextView>
-        
+
         <TextView
             android:id="@+id/country"
             android:layout_width="match_parent"
@@ -88,12 +171,11 @@
             android:layout_below="@+id/city"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="15dp"
             android:hint="@string/profile_view_country"
-            android:paddingLeft="10dp" >
+            android:paddingLeft="10dp"
+            android:textAppearance="@android:style/TextAppearance.Medium" >
         </TextView>
-        
-        
     </RelativeLayout>
 
 </RelativeLayout>
