--- a/android/android.main/res/layout/activity_contact.xml
+++ b/android/android.main/res/layout/activity_contact.xml
@@ -20,19 +20,28 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:layout_marginBottom="30dp"
             android:hint="@string/contact_view_nickname"
             android:inputType="textPersonName"
             android:textAppearance="@android:style/TextAppearance.Large" >
         </EditText>
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/nameRelativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nicknameRelativeLayout"
+        android:orientation="vertical" >
+
         <TextView
             android:id="@+id/lblProfileSection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nickname"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             android:text="@string/profile_view_section_profile" />
 
         <View
@@ -44,15 +53,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="3dp"
             android:background="@android:color/black" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/nameRelativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nicknameRelativeLayout"
-        android:orientation="vertical" >
-
+        
+        
         <ImageView
             android:id="@+id/selfie"
             android:layout_width="80dp"
@@ -60,6 +62,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
+            android:layout_below="@+id/view1"
             android:background="@android:color/transparent"
             android:clickable="true"
             android:contentDescription="@string/profile_view_content_description"
@@ -72,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="50dp"
             android:layout_toRightOf="@+id/selfie"
             android:hint="@string/profile_view_first_name"
             android:textAppearance="@android:style/TextAppearance.Medium" >
